# slint-mapping

./: .gitignore  Cargo.toml  README.md  _typos.toml  audit.toml  build.rs  deny.toml  justfile
.github/: FUNDING.yml
.github/workflows/: pages.yml
crates/slint-android-gestures/: Cargo.toml  README.md
crates/slint-android-gestures/kotlin/: GestureBridge.kt  SlintGestureActivity.kt
crates/slint-android-gestures/src/: build.rs  jni_impl.rs  lib.rs
docs/: android-pinch.md
examples/: map_page.rs  viewer.rs
sample-tiles/: ATTRIBUTION
scripts/: download-osm-region.py  download-osm-tiles.sh
src/: cache.rs  camera.rs  controller.rs  lib.rs  prefetch.rs  projection.rs  routing.rs  source.rs  viewport.rs
src/routers/: mod.rs  osrm.rs
src/sources/: file.rs  mod.rs  osm.rs  synthetic.rs  util.rs  wasm_osm.rs
tests/: backend.rs  subwindow.rs
ui/: _validate.slint  map.slint
wasm-demo/: Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  build.rs  index.html
wasm-demo/src/: lib.rs
wasm-demo/test/: package-lock.json  package.json  verify-pinch.js  verify.js
wasm-demo/ui/: demo.slint
wasm-demo/web/: index.html
