[package]
name = "slint-mapping"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Map framework for Slint — interactive map component with tile rendering, panning, zooming, and marker overlays."
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
slint = { version = "1", default-features = false, features = [
    "compat-1-2",
    "std",
] }
# Synchronous HTTP client used by OsmTileSource + prefetch::region for
# fetching raster tiles. Gated behind the `http` feature so consumers
# who only want offline tile bundles don't pull rustls in.
ureq = { version = "2", default-features = false, features = ["tls"], optional = true }
# Off-thread PNG decoding. Used by OsmTileSource's worker so the UI
# thread never decodes — only wraps an already-decoded
# SharedPixelBuffer via slint::Image::from_rgba8. PNG-only for now to
# keep the dep small.
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
# JSON deserialisation for OsrmRouter responses. Gated behind the
# `routing` feature so consumers who only want tile rendering don't
# pull serde derive machinery.
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[build-dependencies]
slint-build = "1"

[dev-dependencies]
# Drives MapView from Rust tests without a real backend / event loop.
i-slint-backend-testing = "1"

[features]
# Pulls in Slint's default desktop backend + Skia renderer so the
# `viewer` example can open a real window. Off by default so consumers
# (e.g. an Android app) don't have winit forced on them.
viewer = ["slint/backend-default", "slint/renderer-skia"]
# Enables OsmTileSource + prefetch::region (HTTP fetching via ureq).
# Pulls `image` too because OsmTileSource decodes PNG bytes off the
# UI thread into a SharedPixelBuffer for non-blocking refreshes.
http = ["dep:ureq", "dep:image"]
# Enables OsrmRouter and the routing types. Shares ureq with the
# `http` feature but adds serde for parsing OSRM's GeoJSON responses;
# kept as a separate feature so a consumer that only wants tile
# rendering doesn't pull serde derive into their build.
routing = ["dep:ureq", "dep:serde", "dep:serde_json"]

[[example]]
name = "viewer"
required-features = ["viewer"]

[[example]]
name = "map_page"
required-features = ["viewer"]

[[bin]]
name = "slint-mapping-prefetch"
path = "src/bin/prefetch.rs"
required-features = ["http"]

